--- a/quester-react-native/build.gradle
+++ b/quester-react-native/build.gradle
@@ -2,44 +2,43 @@ plugins {
     id 'kotlin-platform-js' version '1.2.60'
 }
 
-apply plugin: 'kotlin-dce-js'
-
 repositories {
+    maven { url "https://kotlin.bintray.com/kotlin-js-wrappers" }
     jcenter()
     mavenCentral()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-js"
+    compile "org.jetbrains:kotlin-react:16.4.2-pre.38-kotlin-1.2.60"
+    compile "org.jetbrains:kotlin-extensions:1.0.1-pre.38-kotlin-1.2.60"
     expectedBy project(":quester-common")
     testCompile "org.jetbrains.kotlin:kotlin-test-js"
 }
 
-task assembleWeb(type: Sync) {
-    configurations.compile.each { File file ->
-        from(zipTree(file.absolutePath), {
-            includeEmptyDirs = false
-            include { fileTreeElement ->
-                def path = fileTreeElement.path
-                path.endsWith(".js") && (path.startsWith("META-INF/resources/") ||
-                        !path.startsWith("META-INF/"))
-            }
-        })
-    }
-    from compileKotlin2Js.destinationDir
-    into "${projectDir}/web"
-
-    dependsOn classes
-}
-
-assemble.dependsOn assembleWeb
-
 compileKotlin2Js {
     kotlinOptions {
-        metaInfo = true
+        metaInfo = false
         outputFile = "$project.buildDir.path/js/${project.name}.js"
         sourceMap = true
-        moduleKind = 'umd'
-        main = "call"
+        moduleKind = 'commonjs'
+//        main = "call"
     }
 }
+
+task doStringReplace{
+    doLast {
+        File file = new File( 'node_modules\\@jetbrains\\kotlin-react\\build\\classes\\main\\kotlin-react.js' )
+        String contents = file.getText( 'UTF-8' )
+        contents = contents.replace("require('kotlin-extensions')", "require('@jetbrains/kotlin-extensions')")
+        file.write(contents, 'UTF-8')
+
+        file = new File( 'build\\js\\quester-react-native.js')
+        contents = file.getText('UTF-8')
+        contents = contents.replace('require(\'kotlin-react\')', 'require(\'@jetbrains/kotlin-react\')')
+        file.write(contents, 'UTF-8')
+
+    }
+}
+
+build.finalizedBy doStringReplace
