--- a/quester-react-native/libs/kotlin-react/package.json
+++ b/quester-react-native/libs/kotlin-react/package.json
@@ -1,11 +1,4 @@
 {
   "name": "kotlin-react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "kotlin-react.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "main": "kotlin-react.js"
 }
